// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerToolbar Should match toolbar snapshot WITH Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <IconButton
    className="button"
    dataTest="editbutton"
    onClick={[Function]}
    tooltip="Edit"
  >
    <SvgEdit24 />
  </IconButton>
  <span
    className="spacer"
  />
  <IconButton
    className="button"
    dataTest="visibilitybutton"
    onClick={[Function]}
    tooltip="Toggle visibility"
  >
    <SvgView24 />
  </IconButton>
  <div
    className="sliderContainer"
  >
    <Tooltip
      closeDelay={400}
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      openDelay={200}
      placement="top"
    >
      <OpacitySlider
        disabled={false}
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <Connect(LayerToolbarMoreMenu)
    onEdit={[Function]}
  />
</div>
`;

exports[`LayerToolbar Should match toolbar snapshot without Edit button 1`] = `
<div
  className="toolbar"
  data-test="layertoolbar"
>
  <IconButton
    className="button"
    dataTest="visibilitybutton"
    onClick={[Function]}
    tooltip="Toggle visibility"
  >
    <SvgView24 />
  </IconButton>
  <div
    className="sliderContainer"
  >
    <Tooltip
      closeDelay={400}
      content="Set layer opacity"
      dataTest="dhis2-uicore-tooltip"
      maxWidth={300}
      openDelay={200}
      placement="top"
    >
      <OpacitySlider
        disabled={false}
        onChange={[Function]}
        opacity={0}
      />
    </Tooltip>
  </div>
  <Connect(LayerToolbarMoreMenu) />
</div>
`;
